# abstract

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  MANIFEST.in  README.md  build.gradle  gradle.properties  requirements.txt  settings.gradle  setup.cfg  setup.py
docs/: conf.py  config.rst  database.rst  example.rst  index.rst  pipeline.puml  repository.rst  transport.rst
src/abstractclient/: __init__.py  abstractpipeline.py  cache.py  cron.py  locker.py  onlinemm.py  utils.py
src/abstractclient/dba/: connection.py  cursor.py  dao.py  exceptions.py  pool.py  transaction.py  utils.py
src/abstractclient/defaultpipeline/: config.py  database.py  transports.py
src/abstractclient/grpc/: __init__.py
src/abstractclient/http/: __init__.py  strategies.py  utils.py
src/abstractclient/smtp/: __init__.py
test/: abstractclient.development.toml  local_db.conf  logging.json  pytest.ini  settings.toml  sql.json  test_cache.py  test_cron.py  test_defaultpipeline.py  test_locker.py  test_onlinemm.py
