[metadata]
author = Sergo Tsitsiashvili
author-email = ciciashvili_s_s@magnit.ru
long-description = file: README.md, CHANGELOG.md
license = MIT
platform = Any
classifiers =
    Development Status :: Release
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Topic :: Software Development :: Utilities

[flake8]
ignore =
    # E501: Длина строки
    E501
exclude = .git,__pycache__,docs/source/conf.py,old,build,dist